Fix padding for featured book on mobile screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1896,6 +1896,8 @@ p {
 @media (max-width: 480px) {
     .books-grid, .book-of-week {
         grid-template-columns: 1fr;
+        padding-right: 0px;
+        padding-left: 0px;
     }
     
     .book-card {
